# handsfree-windows

./: .gitignore  LICENSE  README.md  TASK.md  linkedin_tree.json  paint_tree.json  pyproject.toml
examples/: notepad_hello.yaml
src/handsfree_windows/: browser.py  cli.py  discover.py  macro.py  recorder.py  selectors.py  tree.py  uia.py  wininput.py
